Added full scroll to website and began formatting

--- a/Template/Template/css/style.css
+++ b/Template/Template/css/style.css
@@ -1,25 +1,37 @@
 
 #title {
-  color: #d42000;
+  color: #009CB8;
   font-weight: bold;
+  text-shadow: 1px 1px white;
+  font-size: 400%
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  background-color: #F0FFFF;
+  font-family: Constantia;
+  background-color: black;
   /*background-color: #FEFDEA;*/
   text-align: center;
+  /*color: white;*/
+}
+
+.text {
+  color: white;
 }
 
 h1 {
   font-weight: 100;
   margin-top: 50px;
+  color: white;
 }
 
 h2 {
   font-weight: 300;
   font-size: 18px;
   margin-bottom: 40px;
+}
+
+h6 {
+  font-size: 22px;
 }
 
 .container-fluid {
@@ -103,4 +115,51 @@ h2 {
 
 .flex-item {
   justify-content: space-around;
+}
+
+.line-1{
+  position: relative;
+  top: 50%;
+  width: 20em;
+  margin: 0 auto;
+  border-right: 2px solid rgba(255,255,255,.75);
+  font-size: 180%;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  transform: translateY(-50%);
+}
+
+/* Animation */
+.anim-typewriter{
+  animation: typewriter 4s steps(44) 1s 1 normal both,
+  blinkTextCursor 500ms steps(44) 20 normal;
+}
+@keyframes typewriter{
+  from{width: 0;}
+  to{width: 16em;}
+}
+@keyframes blinkTextCursor{
+  from{border-right-color: rgba(255,255,255,.75);}
+  to{border-right-color: black;}
+}
+
+.fade-in {
+  /*animation: fadeIn 2s;*/
+  opacity: 1;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.covid-spheres {
+  position: relative;
+  top: 20px;
+  transform: rotate(180deg);
 }
