--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -31,10 +31,10 @@
             <div class="row justify-content-center" style="height: 100vh">
                 <div class="align-self-center">
                     <h1 id="title">American Time Usage</h1>
-                    <h2 class="line-1 anim-typewriter" style="color:white">in the Era of the COVID-19 Pandemic</h2>
+                    <h2 class="line-1 anim-typewriter" style="color:tomato; ">in the Era of the COVID-19 Pandemic</h2>
                     <br>
-                    <div style="-webkit-border-image: -webkit-gradient(linear, left top, left bottom, from(#00abeb), to(black), color-stop(0.5, #ccebf0), color-stop(0.5, #66cc00)) 21 30 30 21;
-                    box-shadow: 0 20px 100px black; border-radius: 50px;">
+                    <div style="background: linear-gradient(to bottom, #33ccff 0%, white 100%);">
+<!--                    /*-webkit-border-image: -webkit-gradient(linear, left top, left bottom, from(#00abeb), to(black), color-stop(0.5, #ccebf0), color-stop(0.5, #66cc00)) 21 30 30 21;>*/-->
                         <img src="images/people.png" alt="people" height="100">
                         <img class="text" src="images/Clock1.gif" alt="clock" width="200" height="200">
                         <img src="images/people2.png" alt="more people" height="90">
@@ -80,7 +80,7 @@
             <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">
             <h1>COVID-19</h1>
             <div class="row justify-content-center" style="height: 65vh; margin: 5vh; width: 100%;
-             border: medium solid tomato; border-radius: 20px; color:white; padding: 15px">
+             border: medium solid tomato; border-radius: 20px; color:black; padding: 15px">
 
                 <h6 class="fade-in">
                     The pandemic radically affected millions of American's day-to-day lives. Jobs were
