--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -30,6 +30,11 @@
             <!-- header -->
             <div class="row justify-content-center" style="height: 100vh">
                 <div class="align-self-center">
+                    <!-- Try and get these images to move continuously across the screen-->
+                    <img id="covid-sphere" src="images/covid-pic.png" alt="covid" height="50">
+                    <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">
+                    <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">
+                    <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">
                     <h1 id="title">American Time Usage</h1>
                     <h2 class="line-1 anim-typewriter" style="color:tomato; ">in the Era of the COVID-19 Pandemic</h2>
                     <br>
@@ -39,28 +44,9 @@
                         <img class="text" src="images/Clock1.gif" alt="clock" width="200" height="200">
                         <img src="images/people2.png" alt="more people" height="90">
                     </div>
-
+                    <hr>
                 </div>
             </div>
-
-            <!-- spacer -->
-<!--            <div class="row justify-content-center" style="height: 3vh"></div>-->
-
-<!--            <div class="row justify-content-center" style="height: 30vh; margin: 5vh; width: 100%;-->
-<!--             border: medium solid tomato; border-radius: 20px; color:white">-->
-<!--                <h6>-->
-<!--                    The pandemic radically affected millions of American's day-to-day lives. Jobs were-->
-<!--                    lost, schools were closed, and travel was limited. We want to understand the magnitude-->
-<!--                    of this disruption through analyzing the ways people spent their time differently during 2020.-->
-<!--                </h6>-->
-<!--                <h6>-->
-<!--                    Each year, the Bureau of Labor Statistics surveys roughly ten thousand households for the-->
-<!--                    <b>American Time Usage Survey</b>, a project which tracks how Americans spend their time.-->
-<!--                    This data helps track <i>how our society chooses to use our collective time</i> — on work, on leisure,-->
-<!--                    on care, on volunteering. This also reveals how we prioritize or change certain behaviors during-->
-<!--                    different time periods, like during a pandemic.-->
-<!--                </h6>-->
-<!--            </div>-->
 
         </div>
     </div>
@@ -73,12 +59,7 @@
             <div>
                 <div class="scroll-indicator" id="section01" data-scroll-indicator-title="COVID-19"></div>
             </div>
-<!--            Try and get these images to move continuously across the screen-->
-            <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">
-            <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">
-            <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">
-            <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">
-            <h1>COVID-19</h1>
+            <img class="globe" src="images/covid-pic-globe.png" alt="globe" height="150">
             <div class="row justify-content-center" style="height: 65vh; margin: 5vh; width: 100%;
              border: medium solid tomato; border-radius: 20px; color:black; padding: 15px">
 
