Restructured unemployment page

--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -30,11 +30,6 @@
             <!-- header -->
             <div class="row justify-content-center" style="height: 100vh">
                 <div class="align-self-center">
-                    <!-- Try and get these images to move continuously across the screen-->
-                    <img id="covid-sphere" src="images/covid-pic.png" alt="covid" height="50">
-                    <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">
-                    <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">
-                    <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">
                     <h1 id="title">American Time Usage</h1>
                     <h2 class="line-1 anim-typewriter" style="color:tomato; ">in the Era of the COVID-19 Pandemic</h2>
                     <br>
@@ -59,7 +54,13 @@
             <div>
                 <div class="scroll-indicator" id="section01" data-scroll-indicator-title="COVID-19"></div>
             </div>
-            <img class="globe" src="images/covid-pic-globe.png" alt="globe" height="150">
+<!--            <img class="globe" src="images/covid-pic-globe.png" alt="globe" height="150">-->
+            <!-- Try and get these images to move continuously across the screen-->
+
+<!--        <img id="covid-sphere" src="images/covid-pic.png" alt="covid" height="50">-->
+<!--        <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">-->
+<!--        <img class="covid-spheres" src="images/covid-pic.png" alt="covid" height="50">-->
+            <h1>COVID-19</h1>
             <div class="row justify-content-center" style="height: 65vh; margin: 5vh; width: 100%;
              border: medium solid tomato; border-radius: 20px; color:black; padding: 15px">
 
@@ -213,8 +214,7 @@
 <!--Fifth Page-->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-8 offset-2"
-             style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
+        <div class="col-md-8 offset-2">
             <div>
                 <div class="scroll-indicator" id="section06" data-scroll-indicator-title="Unemployment Rate"></div>
             </div>
@@ -225,12 +225,12 @@
                     <h2>Highest in Black and Brown Communities</h2>
                 </div>
             </div>
-            <div class="row justify-content-center" style="height: 75vh"> <!--75vh-->
+            <div class="row justify-content-center" style="height: 95vh"> <!--75vh-->
                 <div class="align-self-center"style="width: 100%">
                     <div id="race" class="box">
                         <div class="two-thirds">
 <!--                            <div id="chart-area-disparities"></div>-->
-                            <div id="unemployment-rate" style="height: 100%; width: 100%"></div>
+                            <div id="unemployment-rate" style="height: 60vh; width: 100%"></div>
                         </div>
                             <div id="unemployment-rate-guess" class="one-third">
                                 What is the average US unemployment rate over this period of time? <br><br>
