--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -256,11 +256,10 @@
             <div class="row justify-content-center" style="height: 75vh">
                 <div class="align-self-center" id="top-five-male" style="width: 50%; height: 50%"></div>
                 <div class="align-self-center" id="top-five-female" style="width: 50%; height: 50%"></div>
-                <div class="align-self-center" id="top-five-white" style="width: 50%; height: 25%"></div>
-                <div class="align-self-center" id="top-five-black" style="width: 50%; height: 25%"></div>
-                <div class="align-self-center" id="top-five-native" style="width: 50%; height: 25%"></div>
-                <div class="align-self-center" id="top-five-asian" style="width: 50%; height: 25%"></div>
-                <div class="align-self-center" id="top-five-mixed" style="width: 50%; height: 25%"></div>
+                <div class="align-self-center" id="top-five-white" style="width: 50%; height: 30%"></div>
+                <div class="align-self-center" id="top-five-black" style="width: 50%; height: 30%"></div>
+                <div class="align-self-center" id="top-five-native" style="width: 50%; height: 30%"></div>
+                <div class="align-self-center" id="top-five-asian" style="width: 50%; height: 30%"></div>
             </div>
         </div>
     </div>
@@ -309,13 +308,7 @@
             <div class="row justify-content-center" style="height: 75vh">
                 <div class="align-self-center"style="width: 100%">
                     <div class="box">
-                        <div class="two-thirds">
-                            Insert Visualization Here
-                        </div>
-                        <div class="one-third">
-                            Insert Visualization Here
-                            Time Usage Overall (area chart)
-                        </div>
+                        <div class="align-self-center" id="clock-chart" style="width: 100%; height: 100%"></div>
                     </div>
                 </div>
             </div>
@@ -365,6 +358,7 @@
 <script src="js/avgHoursWorked.js"></script>
 <script src="js/pieChart.js"></script>
 <script src="js/changeBar.js"></script>
+<script src="js/clockChart.js"></script>
 
 </body>
 </html>
