--- a/Template/Template/css/style.css
+++ b/Template/Template/css/style.css
@@ -174,6 +174,22 @@ div.covid-sphere {
   animation: pulse 2s linear infinite;
 }
 
+#clock-charts {
+  position: relative;
+  top: 0;
+  left: 0;
+  /*top: 50%;*/
+  /*top: 300px;*/
+  /*left: 300px;*/
+}
+
+#clock-charts div svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+
 @-webkit-keyframes pulse {
   0% {
     -webkit-transform: scale(1.1);
