--- a/Template/Template/css/style.css
+++ b/Template/Template/css/style.css
@@ -25,6 +25,12 @@ body {
   /*height: 300px; !* Should be removed. Only for demonstration *!*/
 }
 
+.column2 {
+  flex: 25%;
+  padding: 5px;
+  /*height: 120px; !* Should be removed. Only for demonstration *!*/
+}
+
 .text {
   /*color: white;*/
 }
