--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -208,7 +208,7 @@
             <div class="row justify-content-center" style="height: 75vh">
                 <div class="align-self-center"style="width: 100%"></div>
                 <div class="box">
-                    <div class="one" id="job-loss-guess">
+                    <div class="one" id="job-loss-guess" style="margin-top: 12vh">
                         How many people in the US lost their jobs at the height of the pandemic? (In Millions) <br><br>
                         <input type="text" id="GuessJobsLost" name="GuessJobsLost" placeholder="Type Your Guess Here"><br><br>
                         <button id="submitJobLoss" value="US" onclick="guessJobLossFunction()">Submit</button>
@@ -422,7 +422,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
-             style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
+             style="margin-top: 5vh; border: medium solid tomato; border-radius: 5px; background: #ffefec; width: 90%; margin-left: 12vh">
             <div>
                 <div class="scroll-indicator" id="section11" data-scroll-indicator-title="Conclusion"></div>
             </div>
@@ -430,6 +430,31 @@
             <div class="row justify-content-center" style="height: 15vh">
                 <div class="align-self-center">
                     <h1>Conclusions</h1>
+                    <h2>The pandemic has shifted the time people spend on certain activities.
+                        Although almost two years has passed since the start of the global pandemic,
+                        those living in the US are still adapting to the drastic changes that have resulted from COVID-19. </h2>
+                </div>
+                <div class="row">
+                    <div class="column2">
+                        <img src="images/headshot.JPEG" alt="Jordan" height="200">
+                        <br>
+                        Jordan Lawanson
+                    </div>
+                    <div class="column2">
+                        <img src="images/new%20hampshire.jpg" alt="Bridger" height="200">
+                        <br>
+                        Bridger Gordon
+                    </div>
+                    <div class="column2">
+                        <img src="images/Halle_Pic.jpg" alt="Halle" height="200">
+                        <br>
+                        Halle Clottey
+                    </div>
+                    <div class="column2">
+                        <img src="images/RegisterPhoto.jpg" alt="Rothsaida" height="200">
+                        <br>
+                        Rothsaida Sylvaince
+                    </div>
                 </div>
             </div>
 
