Fixed formatting and conclusion

--- a/Template/Template/index.html
+++ b/Template/Template/index.html
@@ -214,7 +214,9 @@
                         <button id="submitJobLoss" value="US" onclick="guessJobLossFunction()">Submit</button>
                     </div>
                     <div class="two">
-                        <div id="job-loss-rate" style="height: 60vh; width: 100%"></div>
+                        <div id="jobLoss" style="height: 80vh;">
+                            <img src="images/covid%20image%204.jfif" alt="Pic" style="height: 40vh; margin-top: 10vh">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -325,7 +327,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
-             style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
+             style="margin-top: 5vh;">
             <div>
                 <div class="scroll-indicator" id="section08" data-scroll-indicator-title="Top Time Uses"></div>
             </div>
@@ -396,7 +398,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-8 offset-2"
-             style="margin-top: 5vh; border: thin solid grey; border-radius: 5px; background: rgba(221,221,221,0.45)">
+             style="margin-top: 5vh;">
             <div>
                 <div class="scroll-indicator" id="section10" data-scroll-indicator-title="The Average Day"></div>
             </div>
